GtkThemes: fixes for backdrop text and headerbar switches (#2696)
- default theme: improved the headerbar switch slider border to not overlap too much
- default+light themes: lighten up the backdrop text color to have a similar color to backdrop fg color

--- a/gtk/src/default/gtk-4.0/_headerbar.scss
+++ b/gtk/src/default/gtk-4.0/_headerbar.scss
@@ -210,12 +210,15 @@ headerbar {
   }
 
   switch, scale {
+    &:checked {
+      border-color: $checkradio_borders_color;
+    }
     slider {
-      @include button(normal-alt, $_button_bg_color);
+      @include button(normal, $_button_bg_color);
     }
 
     &:hover slider {
-      @include button(hover-alt, $_button_bg_color);
+      @include button(hover, $_button_bg_color);
     }
 
     &:checked > slider { border-color: $_button_border_color; }
